# lasserre

./: .gitignore  README.org  flake.nix  lasserre.cabal  poly.cabal
exe/: Main.hs
src/Math/Algebra/Hspray/: Lasserre.hs  Utils.hs
test/: Spec.hs
