cabal-version: 3.4
name:          polylang
version:       0.1.0.0
license:
author:        Sam Stites
maintainer:    Sam Stites <spnony@f.cge.qri>#rot13
build-type:    Simple

common base
  default-language: GHC2021
  build-depends:
    , base                  ^>=4.18.0.0
    , bytestring
    , co-log
    , containers
    , hmatrix
    , hspray
    , math-functions
    , numeric-prelude
    , pretty-show
    , text
    , unordered-containers

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Math.Algebra.Hspray.Lasserre
    Math.Algebra.Hspray.Utils

executable int
  import:         base
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    polylang

test-suite spec
  import:         base
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , polylang
    , hedgehog
    , hspec
    , hspec-hedgehog
